--- a/platform/mv3/extension/_locales/ta/messages.json
+++ b/platform/mv3/extension/_locales/ta/messages.json
@@ -16,11 +16,11 @@
     "description": "English: uBO Lite — Dashboard"
   },
   "settingsPageName": {
-    "message": "Settings",
+    "message": "அமைப்புகள்",
     "description": "appears as tab name in dashboard"
   },
   "customFiltersPageName": {
-    "message": "Custom filters",
+    "message": "விருப்ப வடிகட்டிகள்",
     "description": "appears as tab name in dashboard"
   },
   "developPageName": {
@@ -28,11 +28,11 @@
     "description": "appears as tab name in dashboard. Inspired from 'Develop' menu in Safari, see https://developer.apple.com/documentation/safari-developer-tools/develop-menu"
   },
   "aboutPageName": {
-    "message": "About",
+    "message": "பற்றி",
     "description": "appears as tab name in dashboard"
   },
   "aboutPrivacyPolicy": {
-    "message": "Privacy policy",
+    "message": "தனியுரிமை கொள்கை",
     "description": "Link to privacy policy on GitHub (English)"
   },
   "popupFilteringModeLabel": {
@@ -52,7 +52,7 @@
     "description": "English: Click to open the dashboard"
   },
   "popupMoreButton": {
-    "message": "More",
+    "message": "மேலும்",
     "description": "Label to be used to show popup panel sections"
   },
   "popupLessButton": {
@@ -64,11 +64,11 @@
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupAds": {
-    "message": "Ads",
+    "message": "விளம்பரங்கள்",
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupPrivacy": {
-    "message": "Privacy",
+    "message": "தனியுரிமை",
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupMalware": {
@@ -76,11 +76,11 @@
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupAnnoyances": {
-    "message": "Annoyances",
+    "message": "எரிச்சல்கள்",
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupMisc": {
-    "message": "Miscellaneous",
+    "message": "இதர",
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupRegions": {
@@ -88,7 +88,7 @@
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "customFiltersImportExportLabel": {
-    "message": "Import / Export",
+    "message": "இறக்குமதி / ஏற்றுமதி",
     "description": "Text label heading the import/export area of custom filters"
   },
   "customFiltersImportTextareaPlaceholder": {
@@ -96,7 +96,7 @@
     "description": "Placeholder text which describes the purpose of the textarea widget"
   },
   "aboutChangelog": {
-    "message": "Changelog",
+    "message": "மாற்றப்பதிவேடு",
     "description": ""
   },
   "aboutCode": {
@@ -104,23 +104,23 @@
     "description": "English: Source code (GPLv3)"
   },
   "aboutContributors": {
-    "message": "Contributors",
+    "message": "பங்களிப்பாளர்கள்",
     "description": "English: Contributors"
   },
   "aboutSourceCode": {
-    "message": "Source code",
+    "message": "நிரல்மூலம்",
     "description": "Link text to source code repo"
   },
   "aboutTranslations": {
-    "message": "Translations",
+    "message": "மொழிபெயர்ப்புகள்",
     "description": "Link text to translations repo"
   },
   "aboutFilterLists": {
-    "message": "Filter lists",
+    "message": "வடிகட்டி பட்டியல்கள்",
     "description": "Link text to uBO's own filter lists repo"
   },
   "aboutDependencies": {
-    "message": "External dependencies (GPLv3-compatible):",
+    "message": "வெளிப்புற சார்புகள் (GPLv3- இணக்கமானது):",
     "description": "Shown in the About pane"
   },
   "supportS6H": {
@@ -132,7 +132,7 @@
     "description": "First paragraph of 'Filter issues' section in Support pane"
   },
   "supportS5H": {
-    "message": "Troubleshooting information",
+    "message": "பிழைதீர்க்கும் தகவல்",
     "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
   },
   "supportS6P1S1": {
@@ -144,11 +144,11 @@
     "description": "A clickable link in the filter issue reporter section"
   },
   "supportS6URL": {
-    "message": "Address of the web page:",
+    "message": "வலைப்பக்கத்தின் முகவரி:",
     "description": "Label for the URL of the page"
   },
   "supportS6Select1": {
-    "message": "The web page…",
+    "message": "வலைப்பக்கம்…",
     "description": "Label for widget to select type of issue"
   },
   "supportS6Select1Option0": {
@@ -156,11 +156,11 @@
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option1": {
-    "message": "Shows ads or ad leftovers",
+    "message": "விளம்பரங்களையோ அல்லது விளம்பரக் குறிப்புகளையோ காண்பிக்கிறது",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option2": {
-    "message": "Has overlays or other nuisances",
+    "message": "மேலோட்டங்கள் அல்லது பிற சிரமங்களைக் கொண்டுள்ளது",
     "description": "An entry in the widget used to select the type of issue"
   },
   "supportS6Select1Option3": {
@@ -200,19 +200,19 @@
     "description": "This describes the default filtering mode setting"
   },
   "filteringMode0Name": {
-    "message": "no filtering",
+    "message": "வடிகட்டு இல்லை",
     "description": "Name of blocking mode 0"
   },
   "filteringMode1Name": {
-    "message": "basic",
+    "message": "அடிப்படை",
     "description": "Name of blocking mode 1"
   },
   "filteringMode2Name": {
-    "message": "optimal",
+    "message": "சிறந்தது",
     "description": "Name of blocking mode 2"
   },
   "filteringMode3Name": {
-    "message": "complete",
+    "message": "முழுமையான",
     "description": "Name of blocking mode 3"
   },
   "basicFilteringModeDescription": {
