--- a/platform/mv3/extension/_locales/es/messages.json
+++ b/platform/mv3/extension/_locales/es/messages.json
@@ -384,11 +384,11 @@
     "description": "Text for buttons used to restore content"
   },
   "resetToDefaultButton": {
-    "message": "Restablecer a ajustes predeterminados…",
+    "message": "Restablecer ajustes predeterminados…",
     "description": "Text for buttons used to reset configurations to default"
   },
   "resetToDefaultConfirm": {
-    "message": "Todos tus ajustes personalizados serán removidos. ¿Realmente quieres restablecer a los ajustes predeterminados?",
+    "message": "Se borrará todas tus configuraciones personalizadas. ¿Seguro que quieres restablecer a la configuración predeterminada?",
     "description": "Message asking user to confirm reset to default settings"
   },
   "dnrRulesWarning": {
