--- a/platform/mv3/extension/_locales/fy/messages.json
+++ b/platform/mv3/extension/_locales/fy/messages.json
@@ -384,11 +384,11 @@
     "description": "Text for buttons used to restore content"
   },
   "resetToDefaultButton": {
-    "message": "Reset to default settings…",
+    "message": "Standertynstellingen weromsette…",
     "description": "Text for buttons used to reset configurations to default"
   },
   "resetToDefaultConfirm": {
-    "message": "All your custom settings will be removed. Do you really want to reset to default settings?",
+    "message": "Al jo oanpaste ynstellingen sille fuortsmiten wurde. Wolle jo de standertynstellingen echt weromsette?",
     "description": "Message asking user to confirm reset to default settings"
   },
   "dnrRulesWarning": {
