--- a/platform/mv3/extension/_locales/bs/messages.json
+++ b/platform/mv3/extension/_locales/bs/messages.json
@@ -4,7 +4,7 @@
     "description": "extension name."
   },
   "extShortDesc": {
-    "message": "Eksperimentalni blokator sadržaja bez dopuštenja. Blokira oglase, trakere za praćenje, \"rudare\" kovanica kripto valute i još [...]",
+    "message": "Efikasno blokator sadržaja. Blokira oglase, trackere, rudare i još mnogo toga odmah nakon instalacije.",
     "description": "this will be in the Chrome web store: must be 132 characters or less"
   },
   "perRulesetStats": {
