--- a/src/_locales/ro/messages.json
+++ b/src/_locales/ro/messages.json
@@ -480,7 +480,7 @@
     "description": "Filter lists section name"
   },
   "3pGroupMalware": {
-    "message": "Domenii malițioase",
+    "message": "Domenii malițioase, securitate",
     "description": "Filter lists section name"
   },
   "3pGroupSocial": {
