--- a/platform/mv3/extension/_locales/cs/messages.json
+++ b/platform/mv3/extension/_locales/cs/messages.json
@@ -12,7 +12,7 @@
     "description": "Appears aside each filter list in the _3rd-party filters_ pane"
   },
   "dashboardName": {
-    "message": "uBO Lite — Ovládací panel",
+    "message": "uBO Lite - Ovládací panel",
     "description": "English: uBO Lite — Dashboard"
   },
   "settingsPageName": {
@@ -32,19 +32,19 @@
     "description": "appears as tab name in dashboard"
   },
   "aboutPrivacyPolicy": {
-    "message": "Ochrana soukromí",
+    "message": "Zásady ochrany osobních údajů",
     "description": "Link to privacy policy on GitHub (English)"
   },
   "popupFilteringModeLabel": {
-    "message": "Filtrovací režim",
+    "message": "režim filtrování",
     "description": "Label in the popup panel for the current filtering mode"
   },
   "popupLocalToolsLabel": {
-    "message": "Na této webové stránce",
+    "message": "Na tomto webu",
     "description": "Label in the popup panel for the local tools section"
   },
   "popupTipReport": {
-    "message": "Nahlásit problém na této webové stránce",
+    "message": "Nahlásit problém",
     "description": "Tooltip used for the 'chat' icon in the panel"
   },
   "popupTipDashboard": {
@@ -136,11 +136,11 @@
     "description": "Label of 'Troubleshooting information' section in 'Report a filter issue' page"
   },
   "supportS6P1S1": {
-    "message": "Abyste dobrovolníky nezatěžovali duplicitními hlášeními, ověřte si, zda již problém nebyl nahlášen.",
+    "message": "Abyste dobrovolníky nezatěžovali duplicitními hlášeními, ověřte si, zda již problém nebyl nahlášen. <b>Poznámka:</b> Klepnutím na tlačítko bude originální stránka odeslána na GitHub.",
     "description": "A paragraph in the filter issue reporter section"
   },
   "supportFindSpecificButton": {
-    "message": "Vyhledat podobná hlášení",
+    "message": "Vyhledat podobná hlášení na GitHubu",
     "description": "A clickable link in the filter issue reporter section"
   },
   "supportS6URL": {
@@ -148,7 +148,7 @@
     "description": "Label for the URL of the page"
   },
   "supportS6Select1": {
-    "message": "Webová stránka…",
+    "message": "Webová stránka...",
     "description": "Label for widget to select type of issue"
   },
   "supportS6Select1Option0": {
@@ -188,11 +188,11 @@
     "description": "A checkbox to use for NSFW sites"
   },
   "supportReportSpecificButton": {
-    "message": "Vytvořit nové hlášení",
+    "message": "Vytvořit nové hlášení na GitHubu",
     "description": "Text for button which opens an external web page in Support pane"
   },
   "defaultFilteringModeSectionLabel": {
-    "message": "Výchozí filtrovací režim",
+    "message": "Výchozí režim filtrování",
     "description": "The header text for the default filtering mode section"
   },
   "defaultFilteringModeDescription": {
@@ -228,11 +228,11 @@
     "description": "This describes the 'complete' filtering mode"
   },
   "noFilteringModeDescription": {
-    "message": "Seznam názvů hostitelů, pro které nebude probíhat žádné filtrování",
+    "message": "Seznam názvů hostitelů, pro které nebude probíhat žádné filtrování.",
     "description": "A short description for the editable field which lists trusted sites"
   },
   "noFilteringModePlaceholder": {
-    "message": "[pouze názvy hostitelů]\nexample.com\ngames.example\n...",
+    "message": "[jen názvy hostitelů]\nexample.com\ngames.example\n...",
     "description": "Default text for in edit field"
   },
   "behaviorSectionLabel": {
@@ -252,7 +252,7 @@
     "description": "Label for a checkbox in the options page"
   },
   "enableStrictBlockLegend": {
-    "message": "Navigace na potenciálně nežádoucí stránky bude zablokována a bude vám nabídnuta možnost pokračovat.",
+    "message": "Bude zablokována navigace na potenciálně nežádoucí stránky a bude Vám nabídnuta volba pro pokračování.",
     "description": "Short description for a checkbox in the options page"
   },
   "developerModeLabel": {
@@ -272,7 +272,7 @@
     "description": "A summary description of the back up/restore section."
   },
   "settingsBackupRestoreLegend": {
-    "message": "Obnovení přepíše všechna vaše aktuální vlastní nastavení.",
+    "message": "Obnovení přepíše všechna Vaše aktuální vlastní nastavení.",
     "description": "Important information about the back up/restore section."
   },
   "findListsPlaceholder": {
@@ -280,7 +280,7 @@
     "description": "Placeholder for the input field used to find lists"
   },
   "strictblockTitle": {
-    "message": "Stránka zablokována",
+    "message": "Stránka byla zablokována",
     "description": "Web page title for the strict-blocked page"
   },
   "strictblockSentence1": {
@@ -292,7 +292,7 @@
     "description": "Text informing about what is causing the page to be blocked"
   },
   "strictblockRedirectSentence1": {
-    "message": "Zablokovaná stránka vás chce přesměrovat na jiný web. Pokud se rozhodnete pokračovat, přejdete přímo na: {{url}}",
+    "message": "Zablokovaná stránka Vás chce přesměrovat na jiný web. Pokud se rozhodnete pokračovat, přejdete přímo na: {{url}}",
     "description": "Text warning about an incoming redirect"
   },
   "strictblockNoParamsPrompt": {
@@ -304,11 +304,11 @@
     "description": "A button to go back to the previous web page"
   },
   "strictblockClose": {
-    "message": "Zavřít okno",
+    "message": "Zavřít toto okno",
     "description": "A button to close the current tab"
   },
   "strictblockDontWarn": {
-    "message": "Nevarujte mě znovu o této stránce",
+    "message": "Příště na tuto stránku neupozorňovat",
     "description": "Label for checkbox in document-blocked page"
   },
   "strictblockProceed": {
@@ -316,11 +316,11 @@
     "description": "A button to navigate to the blocked page"
   },
   "zapperTipEnter": {
-    "message": "Přejít do režimu dočasného skrytí prvků",
+    "message": "Odebrat prvek",
     "description": "Tooltip for the button used to enter zapper mode"
   },
   "zapperTipQuit": {
-    "message": "Opustit režim dočasného skrytí prvků",
+    "message": "Ukončit režim dočasného skrytí prvků",
     "description": "Tooltip for the button used to exit zapper mode"
   },
   "pickerTipEnter": {
@@ -336,7 +336,7 @@
     "description": "A label of a dropdown list"
   },
   "developOptionFilteringModeDetails": {
-    "message": "Detaily filtovacího módu",
+    "message": "Detaily režimu filtrování",
     "description": "An option in a dropdown list"
   },
   "developOptionCustomDnrRules": {
@@ -344,7 +344,7 @@
     "description": "An option in a dropdown list"
   },
   "developOptionDnrRulesOf": {
-    "message": "DNR pravidla …",
+    "message": "Pravidla DNR pro...",
     "description": "A section header in a dropdown list"
   },
   "developOptionDynamicRuleset": {
@@ -352,7 +352,7 @@
     "description": "An option in a dropdown list"
   },
   "developOptionSessionRuleset": {
-    "message": "",
+    "message": "Seznam pravidel relace",
     "description": "An option in a dropdown list"
   },
   "saveButton": {
@@ -368,27 +368,27 @@
     "description": "Text for buttons used to add content"
   },
   "importAndAppendButton": {
-    "message": "Importovat a připojit…",
+    "message": "Importovat a připojit...",
     "description": "Text for buttons used to import and append content"
   },
   "exportButton": {
-    "message": "Exportovat…",
+    "message": "Exportovat...",
     "description": "Text for buttons used to export content"
   },
   "backupButton": {
-    "message": "Zálohovat…",
+    "message": "Zálohovat...",
     "description": "Text for buttons used to back up content"
   },
   "restoreButton": {
-    "message": "Obnovit…",
+    "message": "Obnovit...",
     "description": "Text for buttons used to restore content"
   },
   "resetToDefaultButton": {
-    "message": "Resetovat do výchozího nastavení…",
+    "message": "Resetovat do výchozího nastavení...",
     "description": "Text for buttons used to reset configurations to default"
   },
   "resetToDefaultConfirm": {
-    "message": "Všechna vaše ruční nastavení budou odebrána. Opravdu chcete resetovat do výchozího nastavení?",
+    "message": "Všechna Vaše vlastní nastavení budou odebrána. Opravdu chcete resetovat do výchozího nastavení?",
     "description": "Message asking user to confirm reset to default settings"
   },
   "dnrRulesWarning": {
@@ -416,7 +416,7 @@
     "description": "Text for the button to create the filter"
   },
   "unpickerUsage": {
-    "message": "Výběrem níže uvedeného filtru zvýrazníte odpovídající prvky na webové stránce. Kliknutím na koš filtr odstraníte.",
+    "message": "Výběrem níže uvedeného filtru zvýrazníte odpovídající prvky na webové stránce. Klepnutím na koš filtr odeberete.",
     "description": "Summary description on how to use the tool to remove custom filters"
   }
 }
