--- a/platform/mv3/extension/_locales/en_GB/messages.json
+++ b/platform/mv3/extension/_locales/en_GB/messages.json
@@ -72,7 +72,7 @@
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupMalware": {
-    "message": "Malware domains",
+    "message": "Malware protection, security",
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupAnnoyances": {
