--- a/platform/mv3/extension/_locales/ja/messages.json
+++ b/platform/mv3/extension/_locales/ja/messages.json
@@ -72,7 +72,7 @@
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupMalware": {
-    "message": "マルウェアドメイン",
+    "message": "マルウェアからの保護、セキュリティ",
     "description": "Header for a ruleset section in 'Filter lists pane'"
   },
   "3pGroupAnnoyances": {
